--- a/笔试/实习&秋招笔面试题目汇总.md
+++ b/笔试/实习&秋招笔面试题目汇总.md
@@ -812,8 +812,8 @@ C. 使用pipeline会对时序有好处，STA更容易通过
 D. 使用pipeline会导致数据延时增加，但如果工作频率不变，系统的吞吐量不会改变
 
 > 解析：BCD
-> - C选项实际上并不正确，例如8个加法运算，在一个时钟内完成，与分为三级流水相比，后者在单个时钟周期内组合逻辑延时更小，对时序有好处，但这一操作并不叫“使用pipeline”，而是增加“pipeline stage“。如果是相对于运算模块的三级流水，与单个运算模块在时间上顺序利用三次相比，这个操作确实叫“使用pipeline”，但是这样对时许并不会造成任何影响，不影响STA。
-> - 对于D选项，实际上也不正确。如果是情况1，增加pipeline stage，会导致数据延时增加，同时系统的吞吐量也不会改变。但是如果是情况2，数据延时不会增加，吞吐量不会改变。
+> - C选项实际上并不正确，例如8个加法运算，在一个时钟内完成，与分为三级流水相比，后者在单个时钟周期内组合逻辑延时更小，对时序有好处，但这一操作并不叫“使用pipeline”，而是增加“pipeline stage“。如果是相对于运算模块的三级流水，与单个运算模块在时间上顺序利用三次相比，这个操作确实叫“使用pipeline”，但是这样对时序并不会造成任何影响，不影响STA。
+> - 对于D选项，实际上也不正确。如果是情况1，增加pipeline stage，会导致数据延时增加，同时系统的吞吐量也不会改变。但是如果是情况2，数据延时不会增加，吞吐量会变大。
 
 40. 下列说法不正确的是（）？
 A. 设计异步FIFO时采用格雷码的原因主要是为了省功耗
